feat(engine): 增强表达式引擎功能与上下文管理
- 新增分支结果管理机制，支持记录和获取分支执行结果
- 实现表达式跳转功能，可通过fn_redirect函数重定向执行指定分支
- 优化全局锁逻辑，支持自定义锁key配置
- 改进函数执行上下文管理，新增FunctionContextManager统一处理函数调用
- 增强调试日志功能，优化debug_object和debug_request函数输出格式
- 完善流程控制枚举定义，增加详细注释说明
- 重构表达式执行流程，支持分支变量存储和清理机制
- 优化线程上下文管理，改进getEnvThreadClassInfo方法实现
- 新增表达式配置代码映射功能，提升分支查找效率
- 改进函数文档加载器，扩展示例函数定义